School_projects/SecondYear_projects/Java_programming/Java_compiler/src/test/deca/context/valid/OwnTests_stepB/valid/tests_operations/add_Int_Int.deca
//test des opérations mathématiques
//
{
    int a = 1;
    int b = 10;
    int c = a + b;
    println(a, " ", b, " ", c, " ", a + b);
}