School_projects/SecondYear_projects/Java_programming/Java_compiler/src/test/deca/context/invalid/OwnTests_stepB/invalid/tests_operations/addAdd_Int_Int.deca
//test des opérations mathématiques en mettant 2 + (unary + qui n'existe pas)
//erreur attendue : extraneous input '+' expecting {'false', 'new', 'null', 'readInt', ... }
{
    int a = 1;
    int b = 10;
    int c = a + (+b);
}